<resources>
    <string name="mensagem_padrao">Me Ajude porfavor</string>
    <string name="app_name">Ajude</string>
    <string name="opcoes">Opções</string>
    <string name="paciente">Paciente</string>
    <string name="save">Salvar</string>
    <string name="exibir">Exibir</string>
    <string name="novo">Novo</string>
    <string name="mensagem">Mensagem de Alerta</string>
    <string name="contato">Nome do Contato</string>
    <string name="telefone">Telefone do Contato</string>
    <string name="exames">Proximos Exames e Consultas</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="novoExame">Cadastrar Exame</string>
    <string name="novoMedicamento">Cadastrar Medicamento</string>
    <string name="medicamentoNome">Nome do Medicamento</string>
    <string name="medicamentoDescricao">Descrição do Medicamento</string>
    <string name="medicamentoHoraDeUso">Horario de Uso</string>
    <string name="medicamentoDosagem">Dosagem</string>
    <string name="medicamentoDataInicio">Data de Inicio</string>
    <string name="medicamentoDataTermino">Data de Termino</string>
    <string name="medicamentoPosologia">Posologia</string>

    <string name="exameDescricao">Descricão do Exame</string>
    <string name="exameData">Data do Exame</string>
    <string name="exameHora">Horario do Exame</string>

    <string name="usuario">Dados do Usuario</string>


</resources>
