<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exame_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.iff.pooa20162.ajude.activity.PacienteAjudaActivity$ExameCadastroActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/novoExame"
        android:id="@+id/tNovoExame"
        android:textStyle="bold"
        android:textColor="#1b5000"
        android:gravity="center"
        android:textSize="25dp"
        android:focusableInTouchMode="true"
        android:focusable="true" />

    <EditText
        android:hint="Nome do Exame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etExameDescricao"
        android:layout_below="@+id/tExameDescricao"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exameData"
        android:id="@+id/texameData"
        android:textStyle="bold"
        android:textSize="20dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:textColor="#000000"
        android:clickable="false"
        android:layout_below="@+id/etExameDescricao"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="31/02/2019"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etexameData"
        android:layout_below="@+id/texameData"
        android:layout_alignParentStart="true" />

    <TextView
        android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exameHora"
        android:id="@+id/texameHora"
        android:textStyle="bold"
        android:textSize="20dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:textColor="#000000"
        android:layout_below="@+id/etexameData"
        android:layout_alignParentStart="true" />

    <EditText
        android:hint="09:30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/etExameHora"
        android:layout_below="@+id/texameHora"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_weight="0.05"
        android:text="Gravar"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:id="@+id/bgravar"
        android:background="@drawable/botao"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="34dp" />

    <Button
        android:text="APAGAR"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:id="@+id/bApagar"
        android:background="@drawable/botao"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_alignTop="@+id/bgravar"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exameDescricao"
        android:id="@+id/tExameDescricao"
        android:textStyle="bold"
        android:textSize="20dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:textColor="#000000"
        android:clickable="false"
        android:enabled="false"
        android:layout_below="@+id/tNovoExame"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />


</RelativeLayout>
