<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.iff.pooa20162.ajude.activity.ExameActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/borda"
        android:layout_below="@+id/tProximosExames"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:id="@+id/frameLayout">

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exameDescricao"
        android:id="@+id/tExameDescricao"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_below="@+id/frameLayout"
        android:layout_alignStart="@+id/frameLayout" />

    <TextView
        android:text="New Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/tvExameDescricao"
        android:layout_below="@+id/tExameDescricao"
        android:layout_alignStart="@+id/tExameDescricao" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exameData"
        android:id="@+id/tDataExame"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/tvExameDescricao"
        android:layout_alignStart="@+id/tvExameDescricao" />

    <TextView
        android:text="New Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/tvDataExame"
        android:layout_below="@+id/tDataExame"
        android:layout_alignStart="@+id/tExameDescricao" />
    <!--
    <LinearLayout
        android:layout_alignStart="@+id/tvExameDescricao"
        android:id="@+id/lSpinner"
        android:layout_below="@+id/tDataExame"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spExameDia"
            android:layout_weight="1" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spExameMes"
            android:layout_weight="1" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spExameAno"
            android:layout_weight="1" />
    </LinearLayout>
    -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exameHora"
        android:id="@+id/tHoraExame"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/tvDataExame"
        android:layout_alignStart="@+id/tvExameDescricao" />


    <TextView
        android:text="New Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/tvHoraDoExame"
        android:layout_below="@+id/tHoraExame"
        android:layout_alignStart="@+id/tExameDescricao" />



</RelativeLayout>
